# coreloop

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  llms.txt  providers.toml  pyproject.toml
.github/workflows/: python-publish.yml  python-tests.yml
examples/: example10_config.py  example11_profiles.py  example12_subagents.py  example13_webtools.py  example14_bashtools.py  example1_minimal.py  example2_conversation.py  example3_agent_lifecycle.py  example4_builtintools.py  example5_customtools.py  example6_streaming.py  example7_raw_messages.py  example8_hooks.py  example9_intrusive_hooks.py  example_cli.py  file_agent.py  hooks.py  minimal.py  tools.py  web_tools.py
src/coreloop/: __init__.py  __main__.py  _cache.py  _logging.py  _tool_execution.py  agent.py  config.py  coreloop.toml  profiles.py  tool_registry.py  types.py  web_tools.py
src/coreloop/cli/: __init__.py  _run.py  _tools.py
src/coreloop/tools/: __init__.py  _shared.py  bash.py  grep.py
src/minimal_agent/: .ma-config.toml  __init__.py  __main__.py  _agent.py  _api_client.py  _builtin_tools.py  _cache.py  _cli.py  _client.py  _config.py  _execution.py  _provider.py  _tool.py  _tool_execution.py  _types.py  _web_tools.py  agent.py  config.py  hooks.py  minimal-agent.toml  minimal_cli.py  profiles.py  registry.py  tool.py  tool_registry.py  types.py  web_tools.py
src/minimal_agent/cli/: __init__.py
src/minimal_agent/tools/: __init__.py  _shared.py  bash.py  edit.py  grep.py  ls.py  read.py  search.py
tests/: conftest.py  test__api_client.py  test__tool_execution.py  test_agent.py  test_bash.py  test_bash_tool.py  test_builtin_tools.py  test_edit.py  test_edit_tool.py  test_grep.py  test_hooks.py  test_integration.py  test_ls.py  test_no_highorder_chars.py  test_ollama_integration.py  test_profiles.py  test_restart.py  test_tool_registry.py  test_web_tools.py
