[project]
name = "minimal-agent"
version = "0.1.0"
description = "A minimal LLM agent with tool-calling and CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Chris Kilner", email = "chris@rhiza.fr" }
]
keywords = ["llm", "agent", "tool-calling", "openai", "ollama", "cli", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.26.1",
    "pydantic>=2.0,<3",
    "diskcache>=5.6.3",
    "python-dotenv>=1.0.1",
    "rich>=13.0.0",
]

[project.optional-dependencies]
web = ["pvl-webtools[markdown]>=0.1.0"]

[project.scripts]
ma = "minimal_agent.minimal_cli:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.pytest.ini_options]
addopts = "-m 'not slow' --strict-markers"
markers = [
    "slow: tests that require a running Ollama instance or provider connection",
]

[tool.cq.thresholds]
"radon-hal" = { warning = 0.45, error = 0.25 }
