[project]
name = "coreloop"
version = "0.1.3"
description = "A lightweight async tool-calling agent for any OpenAI-compatible API, usable as a library or CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Chris Kilner", email = "chris@rhiza.fr" }
]
keywords = ["llm", "agent", "tool-calling", "openai", "ollama", "cli", "async", "streaming", "hooks", "httpx", "local-models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.26.1",
    "pydantic>=2.0,<3",
    "diskcache>=5.6.3",
    "python-dotenv>=1.0.1",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/rhiza-fr/coreloop"
Repository = "https://github.com/rhiza-fr/coreloop"
Issues = "https://github.com/rhiza-fr/coreloop/issues"

[project.optional-dependencies]
web = ["html-to-markdown>=3.5"]

[project.scripts]
core = "coreloop.cli:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
addopts = "-m 'not slow' --strict-markers"
markers = [
    "slow: tests that require a running Ollama instance or provider connection",
]

[tool.cq.thresholds]
"radon-hal" = { warning = 0.45, error = 0.25 }

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-semiprivate = true
ignore-private = true
ignore-magic = true
exclude = [".claude"]
